# arba-inis

./: .clang-format  CMakeLists.txt  CMakeUserPresets.json  README.md  cmake_quick_install.cmake  conanfile.py
cmake/config/: package-config.cmake.in
cmake/scripts/: quick_install.cmake
example/: CMakeLists.txt  create_inis.cpp  inis_example.cpp  read_inis.cpp
example/basic_cmake_project/: CMakeLists.txt  main.cpp
include/arba/inis/: inis.hpp
include/inis/: inis.hpp  settings.hpp
src/: inis_parser.cpp  section.cpp  settings.cpp
src/arba/inis/: inis_parser.cpp  section.cpp
test/: CMakeLists.txt  inis_tests.cpp  project_version_tests.cpp  settings.inis
test/inis/: basic_settings.inis  settings.inis
test_package/: CMakeLists.txt  test_package.cpp
